--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ deploy-to-github:
     - cp ./dist/* hi/
     - cd hi
     - git add .
-    - git commit -m "Automated commit based on -- $LAST_COMMIT_MSG | $LAST_COMMIT_ID"
+    - git commit -m "Automated deploy commit based on -- $LAST_COMMIT_MSG | $LAST_COMMIT_ID"
     - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
     - git checkout master
     - rm -rf *
@@ -44,5 +44,5 @@ deploy-to-github:
     - cp -r . hi/
     - cd hi
     - git add .
-    - git commit -m "Automated commit based on -- $LAST_COMMIT_MSG | $LAST_COMMIT_ID"
+    - git commit -m "Automated deploy commit based on -- $LAST_COMMIT_MSG | $LAST_COMMIT_ID"
     - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
