updated git package

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 
 before_script:
   - apt update && apt upgrade -y
-  - apt install git
+  - apt install git-core
 
 build-app:
   stage: build
