--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ cache:
     - node_modules/
 
 before_script:
-  - apt update && apt upgrade -y
-  - apt install git-core
+  - apt-get update && apt-get upgrade -y
+  - apt-get install git-core
 
 build-app:
   stage: build
