--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ deploy-to-github:
   only:
     - master
   variables:
-    LAST_COMMIT_MSG: 'echo $(git log -1 --pretty=%B)'
-    LAST_COMMIT_ID: 'echo $(git log --format="%H" -n 1)'
+    LAST_COMMIT_MSG: echo $(git log -1 --pretty=%B)
+    LAST_COMMIT_ID: echo $(git log --format="%H" -n 1)
   script:
     - npm i
     - npm run build
@@ -41,7 +41,7 @@ deploy-to-github:
     - cp CNAME hi/
     - cd hi
     - git add .
-    - git commit -m "Automated deploy commit based on -- $LAST_COMMIT_MSG | $LAST_COMMIT_ID"
+    - git commit -m "Automated deploy commit based on -- $CI_COMMIT_MESSAGE | $CI_COMMIT_SHA"
     - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
     - git checkout master
     - rm -rf *
@@ -49,5 +49,5 @@ deploy-to-github:
     - rsync -av --progress . ./hi/ --exclude hi
     - cd hi
     - git add .
-    - git commit -m "Automated deploy commit based on -- $LAST_COMMIT_MSG | $LAST_COMMIT_ID"
+    - git commit -m "Automated deploy commit based on -- $CI_COMMIT_MESSAGE | $CI_COMMIT_SHA"
     - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
