--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,26 +25,20 @@ deploy-to-github:
   only:
     - master
   script:
-    - npm i
-    - npm run build
+    - cd ..
+    - ls
     - git config --global user.email "${GIT_EMAIL}"
     - git config --global user.name "${GIT_NAME}"
-    - git clone https://github.com/stephensprinkle/hi.git
-    - cd hi
-    - git checkout gh-pages
-    - rm -rf *
-    - cd ..
-    - cp ./dist/* hi/
-    - cp CNAME hi/
-    - cd hi
-    - git add .
-    - git commit -m "Automated deploy commit based on -- $CI_COMMIT_MESSAGE | $CI_COMMIT_SHA"
-    - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
+    - git clone https://github.com/stephensprinkle/hi.git hi-github
+    - cd hi-github
     - git checkout master
     - rm -rf *
-    - cd ..
-    - rsync -av --progress . ./hi/ --exclude hi
-    - cd hi
+    - cd ../hi/
+    - npm i
+    - npm run build
+    - cp -r . ../hi-github/
+    - cp CNAME ../hi-github/docs/
+    - cd ../hi-github/
     - git add .
     - git commit -m "Automated deploy commit based on -- $CI_COMMIT_MESSAGE | $CI_COMMIT_SHA"
     - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
