--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "parcel build index.html -d docs",
     "--": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
