--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,9 @@ deploy-to-github:
   script:
     - git config --global user.email "${GIT_EMAIL}"
     - git config --global user.name "${GIT_NAME}"
-    - git remote add github https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
     - npm i
     - npm run build
     - cp CNAME ./docs/
     - git add .
     - git commit -m "Automated deploy commit based on -- $CI_COMMIT_MESSAGE | $CI_COMMIT_SHA"
-    - git push -u github master 
+    - git push https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git master:master
