straight reset of origin

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,7 @@ deploy-to-github:
   script:
     - git config --global user.email "${GIT_EMAIL}"
     - git config --global user.name "${GIT_NAME}"
-    - git remote rename origin origin-bak
-    - git remote add origin https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
+    - git remote set-url origin https://${GITHUB_USER}:${GITHUB_PAT}@github.com/stephensprinkle/hi.git
     - npm i
     - npm run build
     - cp CNAME ./docs/
