--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 
 before_script:
   - apt-get update && apt-get upgrade -y
-  - apt-get install git-core rsync -y
+  - apt-get install git-core -y
 
 build-app:
   stage: build
