--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An expression of Stephen Sprinkle",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html",
+    "dev": "npm run clean && parcel index.html",
     "build": "parcel build index.html -d docs",
+    "clean": "rm -rf node_modules && npm i",
     "--": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
