--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   hi:
-    image: node:latest
+    image: node:lts
     container_name: 'hi'
     networks:
       - hi-net
