updated build script to fix missing CNAME + copy of pdf

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "docker:dev": "npm run clean && parcel index.html",
     "==PROD==": "",
     "build": "docker run -v `pwd`:/home/node/app -w='/home/node/app' node:lts npm run docker:build",
-    "docker:build": "npm run clean && parcel build index.html -d docs",
+    "docker:build": "npm run clean && rm -rf docs && parcel build index.html -d docs && cp CNAME ./docs/ && cp ./src/assets/stephen-sprinkle-resume.pdf ./docs/",
     "==UTILITY==": "",
     "clean": "rm -rf node_modules && npm i"
   },
