added framework + build tool to footer and adjusted styling

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "==DEV==": "",
-    "dev": "docker-compose -f ./docker-compose.yml up --force-recreate",
-    "docker:dev": "npm run clean && parcel index.html",
+    "dev": "docker run -p 1234:1234 -p 1235:1235 -v `pwd`:/home/node/app -w='/home/node/app' node:lts npm run docker:dev",
+    "docker:dev": "npm run clean && parcel index.html --port 1234 --hmr-port 1235",
     "==PROD==": "",
     "build": "docker run -v `pwd`:/home/node/app -w='/home/node/app' node:lts npm run docker:build",
     "docker:build": "npm run clean && rm -rf docs && parcel build index.html -d docs && cp CNAME ./docs/ && cp ./src/assets/stephen-sprinkle-resume.pdf ./docs/",
